# loquitor

./: CLAUDE.md  CONTRIBUTING.md  Cargo.toml  LICENSE  README.md
.github/workflows/: ci.yml  release.yml
docs/: ARCHITECTURE.md  DESIGN.md  RELEASE-INFRA.md  WIZARD.md
src/: lib.rs  main.rs
src/audio/: mod.rs  player.rs
src/config/: mod.rs  types.rs
src/daemon/: ipc.rs  liaison_worker.rs  mod.rs  pipeline.rs
src/liaison/: anthropic.rs  minimax.rs  mod.rs  openai.rs  prompt.rs  scrub.rs
src/shell/: mod.rs
src/tts/: elevenlabs.rs  macos.rs  minimax.rs  mod.rs  openai.rs
src/watcher/: activity.rs  directory.rs  idle.rs  lane.rs  mod.rs  parser.rs
src/wizard/: liaison.rs  mod.rs  policy.rs  provider.rs  test.rs  voice.rs
tests/: audio_queue_test.rs  config_test.rs  idle_test.rs  lane_test.rs  liaison_test.rs  liaison_worker_test.rs  parser_test.rs  pipeline_test.rs  scrub_test.rs  shell_test.rs  tts_test.rs
web/: package-lock.json
web/src/app/: globals.css  layout.tsx  page.tsx
web/src/components/: CopyButton.module.css  CopyButton.tsx  Divider.tsx  InfoCard.tsx  PromptLine.tsx  Terminal.module.css  Terminal.tsx  terminal-layout.ts
