[package]
name = "loquitor"
version = "0.2.0"
edition = "2021"
authors = ["Diego Gallovich"]
description = "Let your agents think out loud — TTS watcher for AI coding agents"
license = "MIT"
repository = "https://github.com/diegogallovich/loquitor"
keywords = ["tts", "claude", "ai", "agent", "voice"]
categories = ["command-line-utilities"]

[dependencies]
tokio = { version = "1", features = ["rt", "macros", "sync", "signal", "net", "io-util", "fs", "time"] }
reqwest = { version = "0.12", default-features = false, features = ["json", "stream", "rustls-tls"] }
rodio = { version = "0.19", default-features = false, features = ["symphonia-mp3", "symphonia-wav"] }
clap = { version = "4", features = ["derive"] }
dialoguer = { version = "0.11", features = ["fuzzy-select"] }
console = "0.15"
notify = "7"
vte = "0.13"
strip-ansi-escapes = "0.2"
serde = { version = "1", features = ["derive"] }
toml = "0.8"
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
colored = "2"
indicatif = "0.17"
bytes = "1"
futures = "0.3"
async-trait = "0.1"
pin-project-lite = "0.2"
serde_json = "1"
dirs = "5"
anyhow = "1"
regex = "1"
nix = { version = "0.29", features = ["signal", "process"] }
hex = "0.4"

[dev-dependencies]
tempfile = "3"
assert_cmd = "2"
predicates = "3"
tokio-test = "0.4"
